package apsas.messaging.model;

public enum SubmissionResult {
  PASSED,
  FAILED,
  PARTIAL
}
