package apsas.messaging.model;

public enum SubmissionStatus {
  PENDING,
  EVALUATED,
  FAILED
}
